k8s/applications/tools/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools-service
  namespace: it-tools                # ← put it in the same namespace as the HTTPRoute
  annotations:
    io.cilium/lb-ipam-ips: 10.25.150.228
spec:
  selector:
    app: it-tools
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: LoadBalancer


---
# Preview service
apiVersion: v1
kind: Service
metadata:
  name: it-tools-preview-service
  namespace: it-tools
spec:
  selector:
    app: it-tools
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
