k8s/applications/tools/it-tools/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools
  namespace: it-tools
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "ittools.pc-tips.se"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: it-tools-service
          port: 8080
